# paraver-kernel

./: .Tpo  .gitignore  ChangeLog  Changelog.demo  Doxyfile  Makefile.am  README  bootstrap  bootstrap-and-dist  cell.cpp  cell.h  column.h  config_traits.h.in  config_types.h.in  configure.ac  configure.in  cube.cpp  first-this.sh  matrix.cpp  matrix.h  paraver-kernel.cbp
api/: Makefile.am  ParaverMetadataManager.cpp  ParaverMetadataManager.h  api.vcproj  cfg.cpp  cfg.h  cfgs4d.cpp  cfgs4d.h  cubecontainer.cpp  cubecontainer.h  cubecontainer_impl.h  customalgorithms.h  drawmode.cpp  drawmode.h  eventdrivencutter.cpp  eventdrivencutter.h  eventlabels.cpp  eventlabels.h  eventtranslator.cpp  eventtranslator.h  filter.cpp  filter.h  gnuplotoutput.cpp  gnuplotoutput.h  histogram.cpp  histogram.h  histogramtotals.cpp  histogramtotals.h  kernelconnection.h  labelconstructor.cpp  labelconstructor.h  loadedwindows.cpp  loadedwindows.h  localkernel.cpp  localkernel.h  otf2prv.cpp  otf2prv.h  output.cpp  output.h  paramedir.cpp  (+61 more)
docs/: paramedir
docs/filters/: cutter.xml  cutter_example.xml  filter.xml  filter_example.xml  software_counters.xml  software_counters_example.xml  together.xml  together_example.xml
include/: Makefile.am  ParaverMetadataManager.h  bplustree.h  bplustreeblocks.h  bplustreeexception.h  bplustreerecordleaf.h  bplustreetypes.h  cell.h  column.h  cube.h  cube_impl.h  cubebuffer.h  cubebuffer_impl.h  filter.h  filtermanagement.h  functionmanagement.h  functionmanagement_impl.h  histogram.h  histogramexception.h  histogramstatistic.h  histogramtotals.h  index.h  index_impl.h  interval.h  intervalcompose.h  intervalcontrolderived.h  intervalcpu.h  intervalderived.h  intervalhigh.h  intervalnotthread.h  intervalshift.h  intervalthread.h  intervaltypes.h  keventdrivencutter.h  keventtranslator.h  kfilter.h  khistogram.h  khistogramtotals.h  kprogresscontroller.h  krecordlist.h  (+61 more)
m4/: m4_ax_boost_base.m4  m4_ax_boost_serialization.m4  macros.m4
paraver-kernel-win32/: inttypes.h  paraver-kernel.sln  paraver-kernel.vcproj  stdint.h
src/: Makefile.am  ParaverMetadataManager.cpp  bplustree.cpp  bplustreeblocks.cpp  bplustreeexception.cpp  bplustreerecordleaf.cpp  cell.cpp  column.cpp  cube.cpp  cubebuffer.cpp  filter.cpp  filtermanagement.cpp  functionmanagement.cpp  histogram.cpp  histogramexception.cpp  histogramstatistic.cpp  histogramtotals.cpp  index.cpp  intervalcompose.cpp  intervalcontrolderived.cpp  intervalcpu.cpp  intervalderived.cpp  intervalnotthread.cpp  intervalshift.cpp  intervalthread.cpp  keventdrivencutter.cpp  keventtranslator.cpp  kfilter.cpp  khistogram.cpp  khistogramtotals.cpp  kprogresscontroller.cpp  krecordlist.cpp  ktrace.cpp  ktracecutter.cpp  ktraceeditactions.cpp  ktraceeditsequence.cpp  ktraceeditstates.cpp  ktracefilter.cpp  ktraceoptions.cpp  ktraceshifter.cpp  (+34 more)
test/: testmain.cpp
test/all_cfg_symbols/: exeMainODBC.pcf  exeMainODBC.row
test/cutter/: comprobacion-visual-xml.sh  cut.bytime.orig-0.brk-0.rmfirst-0.rmlast-0.xml  cut.bytime.orig-0.brk-0.rmfirst-0.rmlast-1.xml  cut.bytime.orig-0.brk-0.rmfirst-1.rmlast-0.xml  cut.bytime.orig-0.brk-0.rmfirst-1.rmlast-1.xml  cut.bytime.orig-0.brk-1.rmfirst-0.rmlast-0.xml  cut.bytime.orig-0.brk-1.rmfirst-0.rmlast-1.xml  cut.bytime.orig-0.brk-1.rmfirst-1.rmlast-0.xml  cut.bytime.orig-0.brk-1.rmfirst-1.rmlast-1.xml  cut.bytime.orig-1.brk-0.rmfirst-0.rmlast-0.xml  cut.bytime.orig-1.brk-0.rmfirst-0.rmlast-1.xml  cut.bytime.orig-1.brk-0.rmfirst-1.rmlast-0.xml  cut.bytime.orig-1.brk-0.rmfirst-1.rmlast-1.xml  cut.bytime.orig-1.brk-1.rmfirst-0.rmlast-0.xml  cut.bytime.orig-1.brk-1.rmfirst-0.rmlast-1.xml  cut.bytime.orig-1.brk-1.rmfirst-1.rmlast-0.xml  cut.bytime.orig-1.brk-1.rmfirst-1.rmlast-1.xml  qsort_beo3.pcf  qsort_beo3.prv  qsort_beo3.prv.cfg  state_as_is.zoom_original.cfg  test-cutter.sh  zoom.state_as_is.originaltime-0.cfg  zoom.state_as_is.originaltime-1.cfg
test/otf2prv/: analysis.sh  extrae.xml  mask-mpi-events-complete.txt  openmp_hello_world.c  run_extrae.sh  run_scorep.sh  translate_otf2_to_prv.sh  validation_all_apps.sh  validation_single_app.sh
utils/: Makefile.am
utils/include/: MPI_EventEncoding.h  Makefile.am  event_description.h  event_encoding.h  event_list.h  events.h  papi_events.h  paraverstatisticfunctions.h  ptools_prv_types.h  ptools_types.h  vectorutils.h
utils/pcfparser/: Makefile.am  ParaverTraceConfig.cpp  ParaverTraceConfig.h  ParaverTraceConfig.ipp  ParaverTraceConfigGrammar.h  ParaverTraceConfigGrammar.ipp  UIParaverTraceConfig.cpp  UIParaverTraceConfig.h  UIParaverTraceConfig.ipp  UIParaverTraceConfig_python.cpp  UIParaverTraceConfig_python.h  debug.h
utils/pcfparser/old/: LibException.cpp  LibException.h  Makefile.am  ParaverEventType.cpp  ParaverEventType.h  ParaverEventValue.cpp  ParaverEventValue.h  ParaverGradientColor.cpp  ParaverGradientColor.h  ParaverGradientNames.cpp  ParaverGradientNames.h  ParaverState.cpp  ParaverState.h  ParaverStatesColor.cpp  ParaverStatesColor.h  ParaverTraceConfig.cpp  ParaverTraceConfig.h  ParaverTraceConfigGrammar.cpp  ParaverTraceConfigGrammar.h  UIParaverTraceConfig.cpp  UIParaverTraceConfig.h
utils/src/: Makefile.am  event_description.cpp  event_list.cpp
utils/traceparser/: pcffileparser.cpp  pcffileparser.h  processmodel.cpp  processmodel.h  processmodelappl.h  processmodeltask.h  processmodelthread.h  prvgetline.h  resourcemodel.cpp  resourcemodel.h  resourcemodelcpu.h  resourcemodelnode.h  rowfileparser.cpp  rowfileparser.h  rowlabels.cpp  rowlabels.h  tracebodyio_v1.cpp  tracebodyio_v1.h  traceheader.h  tracelabels.h  tracetypes.h
