
# Process this file with autoconf to produce a configure script.

#########################
#    Initializations    #
#########################

# Initialize autoconf & define package name, version and bug-report address
AC_INIT(paraver-kernel, 1.0, tools@bsc.es)

# Safety check to ensure that the directory told with `--srcdir` contains the source code
AC_CONFIG_SRCDIR(src/)

# Initialize automake
AM_INIT_AUTOMAKE

# Specify the output configuration header file
AC_CONFIG_HEADERS(config.h)


#############################
#    Checks for programs    #
#############################

# Search for available compilers and preprocessor
AC_PROG_CC(gcc xlc cc)
AC_PROG_CXX(g++ xlC CC)
AC_PROG_CPP
AC_PROG_CXXCPP

# Search for libtool support
AC_LIBTOOL_WIN32_DLL
AM_PROG_LIBTOOL

AX_BOOST_BASE(1.36)
AX_BOOST_SERIALIZATION

######################################################################
#    Checks for typedefs, structures and compiler characteristics    #
######################################################################

AC_CHECK_TYPES([long, long long, char, int, short int])
AC_CHECK_SIZEOF(long)
AC_CHECK_SIZEOF(long long)
AC_CHECK_SIZEOF(char)
AC_CHECK_SIZEOF(int)
AC_CHECK_SIZEOF(short int)
AC_CHECK_TYPES([int64_t, uint64_t, int8_t, uint8_t, int32_t, uint32_t, int16_t, uint16_t])


#########################################
#    Checks for user defined options    #
#########################################


CFLAGS="$CFLAGS -Iinclude/ -Iapi/ -I../include/ -I../api/ -I../common-files/ -I../../common-files/ -I../../common-files/pcfparser -D_FILE_OFFSET_BITS=64 -D_LARGEFILE64_SOURCE"
CXXFLAGS="$CXXFLAGS -Iinclude/ -Iapi/ -I../include/ -I../api/ -I../common-files/ -I../../common-files/ -I../../common-files/pcfparser -D_FILE_OFFSET_BITS=64 -D_LARGEFILE64_SOURCE"
LDFLAGS="$LDFLAGS $BOOST_LDFLAGS $BOOST_SERIALIZATION_LIB"

AC_OUTPUT([Makefile src/Makefile api/Makefile])
