
pkglib_LTLIBRARIES = libparaver-api.la


libparaver_api_la_SOURCES = \
                    cfg.cpp \
                    cfgs4d.cpp \
                    drawmode.cpp \
                    eventdrivencutter.cpp \
                    eventlabels.cpp \
                    eventtranslator.cpp \
                    filter.cpp \
                    gnuplotoutput.cpp \
                    histogram.cpp \
                    histogramtotals.cpp \
                    labelconstructor.cpp \
                    loadedwindows.cpp \
                    localkernel.cpp \
                    output.cpp \
                    paraverconfig.cpp \
                    previousfiles.cpp \
                    progresscontroller.cpp \
                    recordlist.cpp \
                    selectionrowsutils.cpp \
                    semanticcolor.cpp \
                    statelabels.cpp \
                    symbolpicker.cpp \
                    syncwindows.cpp \
                    textoutput.cpp \
                    trace.cpp \
                    tracecutter.cpp \
                    traceeditactions.cpp \
                    traceeditsequence.cpp \
                    tracefilter.cpp \
                    traceoptions.cpp \
                    traceshifter.cpp \
                    tracesoftwarecounters.cpp \
                    window.cpp \
                    workspace.cpp \
                    workspacemanager.cpp


include_HEADERS = \
                  cfg.h \
                  cfgs4d.h \
                  ../config_traits.h \
                  ../config_types.h \
                  cubecontainer.h \
                  cubecontainer_impl.h \
                  customalgorithms.h \
                  drawmode.h \
                  eventdrivencutter.h \
                  eventlabels.h \
                  eventtranslator.h \
                  filter.h \
                  gnuplotoutput.h \
                  histogram.h \
                  histogramtotals.h \
                  kernelconnection.h \
                  labelconstructor.h \
                  loadedwindows.h \
                  localkernel.h \
                  output.h \
                  paramedir.h \
                  paraverconfig.h \
                  paraverkernelexception.h \
                  paraverkerneltypes.h \
                  paraverlabels.h \
                  paravertypes.h \
                  previousfiles.h \
                  progresscontroller.h \
                  prvtypes.h \
                  recordlist.h \
                  selectionmanagement.h \
                  selectionmanagement_impl.h \
                  selectionrowsutils.h \
                  semanticcolor.h \
                  statelabels.h \
                  symbolpicker.h \
                  syncwindows.h \
                  trace.h \
                  textoutput.h \
                  tracecutter.h \
                  traceeditactions.h \
                  traceeditsequence.h \
                  traceeditstates.h \
                  traceeditstates_impl.h \
                  tracefilter.h \
                  traceoptions.h \
                  traceshifter.h \
                  tracesoftwarecounters.h \
                  window.h \
                  workspace.h \
                  workspacemanager.h \
                  zoomhistory.h \
                  zoomhistory_impl.h


mrproper: distclean
	rm -fr Makefile.in
