noinst_HEADERS = \
                          bplustreeblocks.h\
                          bplustreeexception.h\
                          bplustree.h\
                          bplustreerecordleaf.h\
                          bplustreetypes.h\
                          cell.h\
                          column.h\
                          cube.h\
                          cubebuffer.h\
                          filtermanagement.h\
                          functionmanagement.h\
                          histogramexception.h\
                          histogramstatistic.h\
                          index.h\
                          intervalcompose.h\
                          intervalcontrolderived.h\
                          intervalcpu.h\
                          intervalderived.h\
                          interval.h\
                          intervalhigh.h\
                          intervalnotthread.h\
                          intervalthread.h\
                          keventdrivencutter.h\
                          keventtranslator.h\
                          kfilter.h\
                          khistogram.h\
                          khistogramtotals.h\
                          kprogresscontroller.h\
                          krecordlist.h\
                          ktrace.h\
                          ktracecutter.h \
                          ktraceeditactions.h \
                          ktraceeditsequence.h \
                          ktraceeditstates.h \
                          ktracefilter.h \
                          ktraceoptions.h \
                          ktraceshifter.h \
                          ktracesoftwarecounters.h \
                          kwindowexception.h\
                          kwindow.h\
                          matrix.h\
                          memoryblocks.h\
                          memorytrace.h\
                          noloadblocks.h\
                          noloadexception.h\
                          noloadtrace.h\
                          plainblocks.h\
                          plaintrace.h\
                          plaintypes.h\
                          processmodelappl.h\
                          processmodel.h\
                          processmodeltask.h\
                          processmodelthread.h\
                          resourcemodelcpu.h\
                          resourcemodel.h\
                          resourcemodelnode.h\
                          semanticcomposefunctions.h\
                          semanticcompose.h\
                          semanticcpufunctions.h\
                          semanticcpu.h\
                          semanticderivedfunctions.h\
                          semanticderived.h\
                          semanticexception.h\
                          semanticfunction.h\
                          semantichigh.h\
                          semanticinfo.h\
                          semanticmanagement.h\
                          semanticnotthreadfunctions.h\
                          semanticnotthread.h\
                          semanticthreadfunctions.h\
                          semanticthread.h\
                          statistic_2d.h\
                          statisticmanagement.h\
                          tracebodyio.h\
                          tracebodyio_v1.h\
                          tracebodyio_v2.h\
                          traceeditblocks.h\
                          traceheaderexception.h\
                          tracestream.h

                         
